feat: add method to return all contents(withous pagination)
